handled missing values + crude feature engineering

--- a/anime-recommendations-project.ipynb
+++ b/anime-recommendations-project.ipynb
@@ -782,7 +782,7 @@
    ],
    "source": [
     "# deleting anime with 0 rating\n",
-    "anime_df=anime_df[~np.isnan(anime_df[\"rating\"])]\n",
+    "anime_df=anime_df[np.isnan(anime_df[\"rating\"])]\n",
     "\n",
     "# filling mode value for genre and type\n",
     "anime_df['genre'] = anime_df['genre'].fillna(\n",
