fixed typo in analysis.ipynb

--- a/analysis.ipynb
+++ b/analysis.ipynb
@@ -1830,9 +1830,9 @@
     "\n",
     "In this notebook, we've detailed the steps taken to generate pairwise similarity scores between anime titles available on [myanimelist.net](https://myanimelist.net) (as of 2021). Specifically, we computed their cosine similarities based on the mean-normalized average ratings provided by the [myanimelist.net](https://myanimelist.net) community, after handling the missing values present in the original data, and subsequently performing feature engineering. \n",
     "\n",
-    "We use these results to define a pipeline (in `src/utils.py`) to obtain the top animes that are most similar to a given title. An installation guide is provided in the `README.md` file, and examples of calling the `get_recommendations` function are given in `inference.ipynb`.\n",
+    "We use these results to define a pipeline (in `src/utils.py`) to obtain the top animes that are most similar to a given title. An installation guide is provided in `README.md`, and detailed examples of calling the `get_recommendations` function are given in `inference.ipynb`.\n",
     "\n",
-    "We once again thank Kaggle user [Yonatan Rabinovich](https://www.kaggle.com/yonatanrabinovich) for scraping together the data using the [myanimelist.net](https://myanimelist.net) API."
+    "We once again thank Kaggle user [Yonatan Rabinovich](https://www.kaggle.com/yonatanrabinovich) for scraping together the data via the [myanimelist.net](https://myanimelist.net) API."
    ]
   }
  ],
