reran analysis.ipynb with minor changes

--- a/analysis.ipynb
+++ b/analysis.ipynb
@@ -705,7 +705,7 @@
     "feature_df.drop(['anime_id', 'rating_user'], axis=1, inplace=True)\n",
     "\n",
     "# Save the dataframe to a csv file\n",
-    "feature_df.to_csv('src/features.csv', index=False)\n",
+    "feature_df.to_csv('data/features.csv', index=False)\n",
     "\n",
     "# Display the first five rows of the dataframe\n",
     "feature_df.head()"
@@ -1795,7 +1795,7 @@
     "results_df = pd.DataFrame(results, index=pivot_norm.index, columns=pivot_norm.index)\n",
     "\n",
     "# Save the dataframe to a csv file\n",
-    "results_df.to_csv('src/similarities.csv', index=False)\n",
+    "results_df.to_csv('data/similarities.csv', index=False)\n",
     "\n",
     "# Display the first five rows of the dataframe\n",
     "results_df.head()"
