moved notebooks into src directory

--- a/src/inference.ipynb
+++ b/src/inference.ipynb
@@ -36,7 +36,7 @@
     "\n",
     "The most straightforward way of calling the `get_recommendations` function is to simply pass in an anime title of your choice. Here, we use the 2002 anime series - Naruto, as our working example. \n",
     "\n",
-    "<img src=\"src/Naruto.png\" alt=\"Naruto\" width=\"300\"/>\n",
+    "<img src=\"images/Naruto.png\" alt=\"Naruto\" width=\"300\"/>\n",
     "\n",
     "Notice that the function outputs the top 5 anime series, ranked in descending order, according to their similarity scores (denoted as a percentage)."
    ]
@@ -153,7 +153,7 @@
    "source": [
     "Instead, one would have to pass in its phonetic Japanese name, exactly as it's listed on [myanimelist.net](https://myanimelist.net/).\n",
     "\n",
-    "<img src=\"src/AoT.png\" alt=\"Shingeki no Kyojin\" width=\"300\"/>"
+    "<img src=\"images/AoT.png\" alt=\"Shingeki no Kyojin\" width=\"300\"/>"
    ]
   },
   {
@@ -196,7 +196,7 @@
     "\n",
     "Unfortunately, there are also edge-cases where an anime is simply not available through the [myanimelist.net](https://myanimelist.net/) catalog. Take for instance, the 2011 drama series - Anohana, which at the time of writing, is only available through Netflix and Funimation.\n",
     "\n",
-    "<img src=\"src/Anohana.png\" alt=\"Anohana\" width=\"800\"/>"
+    "<img src=\"images/Anohana.png\" alt=\"Anohana\" width=\"800\"/>"
    ]
   },
   {
